--- a/package.json
+++ b/package.json
@@ -16,6 +16,25 @@
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@coreui/coreui": "^3.0.0-beta.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.25",
+        "@fortawesome/free-solid-svg-icons": "^5.11.2",
+        "@fortawesome/vue-fontawesome": "^0.1.8",
+        "bootstrap-vue": "^2.1.0",
+        "jquery": "^3.4.1",
+        "perfect-scrollbar": "^1.4.0",
+        "popper.js": "^1.16.0",
+        "vue": "^2.6.10",
+        "vue-cookies": "^1.5.13",
+        "vue-notification": "^1.3.20",
+        "vue-router": "^3.1.3",
+        "vue-sweetalert2": "^2.1.5",
+        "vuejs-paginate": "^2.1.0",
+        "vuex": "^3.1.2",
+        "weekstart": "^1.0.1"
     }
 }
