--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "jquery": "^3.4.1",
         "perfect-scrollbar": "^1.4.0",
         "popper.js": "^1.16.0",
+        "serial-number": "^1.3.0",
         "vue": "^2.6.10",
         "vue-cookies": "^1.5.13",
         "vue-notification": "^1.3.20",
