--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "vue-cookies": "^1.5.13",
         "vue-notification": "^1.3.20",
         "vue-router": "^3.1.3",
+        "vue-select": "^3.4.0",
         "vue-sweetalert2": "^2.1.5",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.1.2",
