--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "serial-number": "^1.3.0",
         "vue": "^2.6.10",
         "vue-cookies": "^1.5.13",
+        "vue-loading-overlay": "^3.2.0",
         "vue-notification": "^1.3.20",
         "vue-router": "^3.1.3",
         "vue-select": "^3.4.0",
