--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=server4_vlam
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -43,5 +43,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SERVER_CENTER=
-SERVER_FTP=
+SERVER_CENTER="https://siwalidi.info:8008"
+FTP_SERVER=45.251.72.66
+MIX_SERVER_CENTER="${SERVER_CENTER}"
+ALLOW_IP=
+ALLOWED_ORIGINS="http://localhost:8081,http://localhost:8082"
