--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=server4_vlam
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -43,8 +43,12 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SERVER_CENTER="https://siwalidi.info:8008"
-FTP_SERVER=45.251.72.66
+SERVER_CENTER=
+
+SERVER_FTP=
+SERVER_USER=
+SERVER_PASSWORD=
+
 MIX_SERVER_CENTER="${SERVER_CENTER}"
 ALLOW_IP=
-ALLOWED_ORIGINS="http://localhost:8081,http://localhost:8082"
+ALLOWED_ORIGINS=""
